--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
     <script type="module" src="./js/theo/index.js"></script>
 
     <style>
-      @import "https://fonts.googleapis.com/css?family=Roboto:400,500";
-
       html {
         height: 100%;
       }
@@ -28,7 +26,7 @@
       main {
         margin: auto;
         padding: 3rem;
-        font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+        font-family: system-ui, sans-serif;
         color: #566b78;
       }
 
