Updated soma notes references

--- a/index.html
+++ b/index.html
@@ -185,9 +185,8 @@
 
           <p class="details">
             You might know me from places like
-            <a href="https://www.talkiatry.com/">Talkiatry</a>,
-            <a href="https://www.lockheedmartin.com/en-us/index.html">Lockheed Martin</a>, or
-            <a href="https://soma-notes.deno.dev/">Soma Notes</a>.
+            <a href="https://www.talkiatry.com/">Talkiatry</a> or
+            <a href="https://www.lockheedmartin.com/en-us/index.html">Lockheed Martin</a>.
           </p>
 
           <p class="details">
@@ -195,7 +194,8 @@
             <a href="/projects">experiment</a>
             with, and
             <a href="/github">create</a>
-            new technologies. I also dabble in creating products of my own.
+            new technologies. I also dabble in creating products of my own, such as
+            <a href="https://github.com/ChristopherBilg/soma-notes">Soma Notes</a>.
           </p>
 
           <p class="details">
