--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -236,15 +236,12 @@
         <hr />
 
         <aside>
-          <h3>Owner</h3>
+          <h3>Developer</h3>
           <p>
             Soma Notes |
-            <a href="https://soma-notes.deno.dev/" target="_blank">Website</a>
+            <a href="https://github.com/ChristopherBilg/soma-notes" target="_blank">GitHub</a>
           </p>
-          <p>
-            June 2023 -
-            <b>Present</b>
-          </p>
+          <p>June 2023 - December 2023</p>
           <p>
             Soma Notes is a simple, global, low-latency note keeping application that uses contextual awareness to
             correlate notes so that you don't have to.
