--- a/index.html
+++ b/index.html
@@ -190,22 +190,22 @@
           </p>
 
           <p class="details">
-            I like to
-            <a href="/projects">experiment</a>
+            I enjoy
+            <a href="/projects">experimenting</a>
             with, and
-            <a href="/github">create</a>
-            new technologies. I also dabble in creating products of my own, such as
+            <a href="/github">creating</a>
+            new technologies. I also dabble in building my own products, such as
             <a href="https://github.com/ChristopherBilg/soma-notes">Soma Notes</a>.
           </p>
 
           <p class="details">
-            I'm a
+            As a
             <span id="title" class="black">Senior Software Engineer</span>
-            at Talkiatry where I'm building a platform to make mental health care more accessible.
+            at Talkiatry I'm building a platform to make mental health care more accessible.
           </p>
 
           <p class="details">
-            Wish to contact me? <a href="mailto:christopherbilg@gmail.com">Email</a> is the best way.
+            If you want to contact me, <a href="mailto:christopherbilg@gmail.com">email</a> is the best way to do so.
           </p>
 
           <nav id="navigation">
