Continued working on theo

--- a/404.html
+++ b/404.html
@@ -33,5 +33,7 @@
     <main>
       <p style="text-align: center">Error 404: Page Not Found</p>
     </main>
+
+    <theo-command-palette />
   </body>
 </html>
