--- a/github/index.html
+++ b/github/index.html
@@ -182,5 +182,7 @@
         document.getElementsByTagName("main")[0].appendChild(app.node);
       })();
     </script>
+
+    <theo-command-palette />
   </body>
 </html>
