--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -453,5 +453,7 @@
         <h3>References available upon request.</h3>
       </section>
     </footer>
+
+    <theo-command-palette />
   </body>
 </html>
