--- a/projects/index.html
+++ b/projects/index.html
@@ -232,5 +232,7 @@
         document.getElementById("link-table-filter").addEventListener("input", handleInput);
       })();
     </script>
+
+    <theo-command-palette />
   </body>
 </html>
