--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Chris Bilger</title>
     <link rel="icon" type="image/x-icon" href="./images/favicon.ico" />
 
-    <script type="module" src="./js/theo-v2/index.js"></script>
+    <script type="module" src="./js/theo/index.js"></script>
 
     <style>
       html {
