--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -81,6 +81,30 @@
         <hr />
 
         <!-- <aside>
+          <h3>Founding Software Engineer</h3>
+          <p class="jittter">Jittter, LLC</p>
+          <p>February 2024 - <b>Present</b></p>
+
+          <details>
+            <summary>Several of my noteworthy accomplishments include:</summary>
+
+            <ol>
+              <li>Implemented scalable and robust infrastructure to support the SaaS product's growth</li>
+              <li>
+                Secured early adopters and conducted user research to iterate on product design and functionality
+              </li>
+              <li>Defined product roadmap and feature priorities in alignment with business goals</li>
+              <li>
+                Designed and developed the initial architecture and core features of the SaaS product from scratch
+              </li>
+              <li>
+                Established coding standards, best practices, and development processes for the engineering team
+              </li>
+            </ol>
+          </details>
+        </aside> -->
+
+        <!-- <aside>
           <h3>Paternity Leave</h3>
           <p class="family-medical-leave">Family and Medical Leave</p>
           <p>INSERT START DATE - INSERT END DATE</p>
