--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Chris Bilger</title>
     <link rel="icon" type="image/x-icon" href="./images/favicon.ico" />
 
-    <script type="module" src="./js/theo/index.js"></script>
+    <script type="module" src="./js/nova/index.js"></script>
 
     <style>
       html {
@@ -227,6 +227,6 @@
       </div>
     </main>
 
-    <theo-command-palette />
+    <nova-command-palette />
   </body>
 </html>
