--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" media="screen" href="../css/mvp.css" />
     <link rel="stylesheet" media="screen" href="../css/styles.css" />
 
-    <script type="module" src="../js/theo/index.js"></script>
+    <script type="module" src="../js/nova/index.js"></script>
   </head>
 
   <body>
@@ -478,6 +478,6 @@
       </section>
     </footer>
 
-    <theo-command-palette />
+    <nova-command-palette />
   </body>
 </html>
