--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" media="screen" href="../css/mvp.css" />
     <link rel="stylesheet" media="screen" href="../css/styles.css" />
 
-    <script type="module" src="../js/theo/index.js"></script>
+    <script type="module" src="../js/nova/index.js"></script>
   </head>
 
   <body>
@@ -34,6 +34,6 @@
       <p style="text-align: center">Error 404: Page Not Found</p>
     </main>
 
-    <theo-command-palette />
+    <nova-command-palette />
   </body>
 </html>
