--- a/projects/index.html
+++ b/projects/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" media="screen" href="../css/mvp.css" />
     <link rel="stylesheet" media="screen" href="../css/styles.css" />
 
-    <script type="module" src="../js/theo/index.js"></script>
+    <script type="module" src="../js/nova/index.js"></script>
   </head>
 
   <body>
@@ -233,6 +233,6 @@
       })();
     </script>
 
-    <theo-command-palette />
+    <nova-command-palette />
   </body>
 </html>
