2 new project ideas

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -249,7 +249,7 @@
             for my wife and daughter respectively. If you are able to break/bypass the encryption and view the contents
             of either webpage, please contact me via
             <a href="mailto:christopherbilg@gmail.com">email</a>
-            so that I can fix it.
+            so that I can fix it (and reward you).
           </p>
         </aside>
 
