--- a/projects/index.html
+++ b/projects/index.html
@@ -54,6 +54,18 @@
           <tbody>
             <tr>
               <td>
+                <a href="/projects/transformers-js">Transformers.js - AI/ML Directly in the Browser</a>
+              </td>
+            </tr>
+
+            <tr>
+              <td>
+                <a href="/projects/js-geolocation">JS Geolocation</a>
+              </td>
+            </tr>
+
+            <tr>
+              <td>
                 <a href="/projects/js-web-rtc">JS Web RTC</a>
               </td>
             </tr>
