--- a/projects/transformers-js/index.html
+++ b/projects/transformers-js/index.html
@@ -16,7 +16,7 @@
   <body>
     <noscript id="full-screen-noscript-message">Please enable JavaScript in order to view this webpage.</noscript>
 
-    <div id="work-in-progress">WORK IN PROGRESS</div>
+    <div id="work-in-progress"></div>
 
     <main hidden>
       <a href="/projects">Back to Projects List</a>
