--- a/projects/index.html
+++ b/projects/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" media="screen" href="../css/mvp.css" />
     <link rel="stylesheet" media="screen" href="../css/styles.css" />
 
-    <script type="module" src="../js/nova/index.js"></script>
+    <script type="module" src="../js/nova/index.js" defer></script>
   </head>
 
   <body>
