--- a/projects/transformers-js/index.html
+++ b/projects/transformers-js/index.html
@@ -11,6 +11,8 @@
     <link rel="icon" type="image/x-icon" href="../../images/favicon.ico" />
     <link rel="stylesheet" media="screen" href="../../css/mvp.css" />
     <link rel="stylesheet" media="screen" href="../../css/styles.css" />
+
+    <script type="module" src="https://cdn.jsdelivr.net/npm/@xenova/transformers@2.16.0" defer></script>
   </head>
 
   <body>
