--- a/projects/js-geolocation/index.html
+++ b/projects/js-geolocation/index.html
@@ -108,11 +108,11 @@
                   this.status
                     ? vdom`
                       <pre>
-                        Latitude: ${this.content.latitude}
+                        Latitude: ${this.content.latitude} degrees
                         <br />
-                        Longitude: ${this.content.longitude}
+                        Longitude: ${this.content.longitude} degrees
                         <br />
-                        Accuracy: ${this.content.accuracy}
+                        Accuracy: ${this.content.accuracy} meter radius circle around the coordinates
                       </pre>
                     `
                     : vdom`
