Using local JS instead of CDN

--- a/projects/transformers-js/index.html
+++ b/projects/transformers-js/index.html
@@ -30,7 +30,7 @@
     </main>
 
     <script type="module">
-      import { pipeline } from "https://cdn.jsdelivr.net/npm/@xenova/transformers@2.16.0";
+      import { pipeline } from "./transformers-2.16.0.js";
       import * as Arlo from "../../js/arlo/index.js";
 
       for (const exportedName in Arlo) {
