--- a/404.html
+++ b/404.html
@@ -9,10 +9,10 @@
 
     <title>Chris Bilger, M.C.S. | Error 404</title>
     <link rel="icon" type="image/x-icon" href="../images/favicon.ico" />
-    <link rel="stylesheet" media="screen" href="./css/mvp.css" />
-    <link rel="stylesheet" media="screen" href="./css/styles.css" />
+    <link rel="stylesheet" media="screen" href="/css/mvp.css" />
+    <link rel="stylesheet" media="screen" href="/css/styles.css" />
 
-    <script type="module" src="./js/nova/index.js" defer></script>
+    <script type="module" src="/js/nova/index.js" defer></script>
   </head>
 
   <body>
