--- a/landing-v2.html
+++ b/landing-v2.html
@@ -22,7 +22,7 @@
         gap: 1rem;
         background-color: #fff;
         border-radius: 0 0 0 1rem;
-        box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1);
+        box-shadow: 0 0 1rem rgba(0, 0, 0, 0.2);
 
         button {
           padding: 0.5rem 1rem;
@@ -33,9 +33,16 @@
           cursor: pointer;
           border-radius: 0.5rem;
           box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.1);
+          border: 1px solid #fff;
 
           &:hover {
             background-color: #f0f0f0;
+            border: 1px solid #ccc;
+          }
+
+          &:active {
+            background-color: #e0e0e0;
+            border: 1px solid #ccc;
           }
         }
       }
