--- a/index.html
+++ b/index.html
@@ -98,6 +98,16 @@
         }
       }
 
+      @media print {
+        #name {
+          font-size: 5rem;
+        }
+
+        #image {
+          display: none;
+        }
+      }
+
       @media only screen and (max-width: 1100px) {
         #name {
           font-size: 6rem;
