Updated template love letters to match victoria/charlotte's

--- a/projects/xyz-love-letters/index.html
+++ b/projects/xyz-love-letters/index.html
@@ -192,6 +192,7 @@
                   h2 {
                     a {
                       color: var(--primary-color);
+
                       &:hover {
                         text-decoration: underline;
                       }
@@ -232,7 +233,7 @@
                               <hr />
 
                               <div id="${letter.date}" class="love-letter-header">
-                                <h2><a href="${letter.date}">${letter.title}</a></h2>
+                                <h2><a href="#${letter.date}">${letter.title}</a></h2>
                                 <h3>${letter.prettyDate}</h3>
                               </div>
 
