--- a/victoria-bilger/index.html
+++ b/victoria-bilger/index.html
@@ -42,6 +42,7 @@
 
         class App extends StyledComponent {
           init() {
+            this.isFetchingOrDecrypting = false;
             this.encoder = new TextEncoder();
             this.decoder = new TextDecoder();
 
@@ -67,7 +68,11 @@
             if (event.which !== 13) return;
 
             event.preventDefault();
+
             this.password = document.getElementById("passwordInput").value;
+
+            this.isFetchingOrDecrypting = true;
+            this.render();
 
             fetch("./encrypted-data.txt")
               .then((response) => response.text())
@@ -87,7 +92,10 @@
                 console.log("Encrypted Data + Additional Love Letters:", ciphertextString);
               })
               .catch((error) => console.error(error))
-              .finally(() => this.render());
+              .finally(() => {
+                this.isFetchingOrDecrypting = false;
+                this.render();
+              });
           }
 
           bufferToBase64(buffer) {
@@ -214,6 +222,16 @@
                           <input type="password" id="passwordInput" name="password" onkeyup="${(event) =>
                             this.handlePasswordInput(event)}" autofocus />
                         </div>
+
+                        ${
+                          this.isFetchingOrDecrypting
+                            ? vdom`
+                                <div class="centered">
+                                  <div>Fetching and decrypting love letters...</div>
+                                </div>
+                              `
+                            : ""
+                        }
                       </div>
                     `
                     : this.decrypted
