Added two new project templates

--- a/projects/index.html
+++ b/projects/index.html
@@ -54,6 +54,18 @@
           <tbody>
             <tr>
               <td>
+                <a href="/projects/js-performance">JS Performance</a>
+              </td>
+            </tr>
+
+            <tr>
+              <td>
+                <a href="/projects/js-web-share">JS Web Share</a>
+              </td>
+            </tr>
+
+            <tr>
+              <td>
                 <a href="/projects/transformers-js">Transformers.js - AI/ML Directly in the Browser</a>
               </td>
             </tr>
